Fix password messages not displayed
Validators should return message ids instead of messages

--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -15,7 +15,12 @@ default.not.equal.message=La propriété [{0}] de la classe [{1}] ne peut pas ê
 default.null.message=La propriété [{0}] de la classe [{1}] ne peut pas être nulle
 default.not.unique.message=La propriété [{0}] de la classe [{1}] doit être unique
 
-accountCommand.newPassword.validator.message=Le mot de passe n'est pas assez sécurisé
+securityUtils.password.mustNotMatchMail=Veuillez choisir un mot de passe différent de votre email
+securityUtils.password.tooShort=Le mot de passe doit comporter au moins {3} caractères
+securityUtils.password.tooLong=Le mot de passe ne peut comporter plus de {3} caractères
+securityUtils.password.notSecure=Le mot de passe n’est pas assez sécurisé
+securityUtils.password.mustContainLettersAndDigits=Le mot de passe doit comporter au moins une lettre et un chiffre
+securityUtils.password.doesNotMatchConfirmation=La confirmation ne correspond pas au mot de passe
 
 default.paginate.prev=Précédent
 default.paginate.next=Suivant
